fixed the star on mobile, and the MainJs error

--- a/src/scss/02-base/_reset.scss
+++ b/src/scss/02-base/_reset.scss
@@ -44,10 +44,19 @@ ul {
 
 button{
 	width:4.2rem;
+	min-width:4rem;
+	display: flex;
+	flex-wrap: nowrap;
+	padding:2px;
 	height: 1.7rem;
 	background: white;
 	border: 0.5px solid #d8d8d6;
 	border-radius: 7px;
+	 span{
+		 flex-shrink: 0;
+		 padding-right: 5px;
+		 padding-left:5px;
+	 }
 	&:hover{
 		background: #f3f3f3;
 	}
